staged all changes for previous commit

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -16,9 +16,18 @@
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.label :author_nickname %><br>
+    <%= form.text_field :author_nickname %><br>
+    <% article.errors.full_messages_for(:author).each do |message| %>
+      <div><%= message %></div>
+    <% end %>
   </div>
 
+  <br>
+  <div>
+    <%= form.submit %>
+  </div>
+  <br>
   <div>
     <%= form.label :status %><br>
     <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
