--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,10 +8,19 @@
 </head>
 <body>
 
-    <%= render "articles/navbar" %>
+  <%= render "articles/navbar" %>
+  
+  <h1><%= Article.public_count %> Articles</h1>
 
-    <p class='notice'><%= notice %></p>
-    <p class='alert'><%= alert %></p>
-    <h1>Welcome<%= name = current_user.present? ? ', ' + current_user.email : '' %></h1>
+  <ul>
+    <% @articles.each do |article| %>
+      <% if article.status == "public" %>
+        <li>
+          <%= article.author_nickname %>: <%= link_to article.title, article %>
+        </li>
+      <% end %>
+    <% end %>
+  </ul>
+
 </body>
 </html>
