--- a/app/views/articles/mine.html.erb
+++ b/app/views/articles/mine.html.erb
@@ -8,10 +8,15 @@
 </head>
 <body>
 
-    <%= render "articles/navbar" %>
+  <%= render "navbar" %>
 
-    <p class='notice'><%= notice %></p>
-    <p class='alert'><%= alert %></p>
-    <h1>Welcome<%= name = current_user.present? ? ', ' + current_user.email : '' %></h1>
+  <ul>
+    <% @articles.each do |article| %>
+      <li>
+        <%= article.author_nickname %>: <%= link_to article.title, article %> - <%= article.status %>
+      </li>
+    <% end %>
+  </ul>
+
 </body>
 </html>
