--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,3 +1,4 @@
+<% if comment.status == "public" || (comment.status == "private" && current_user != nil && comment.article.author_email == current_user.email) %>
 <p>
   <strong>Commenter:</strong>
   <%= comment.commenter %>
@@ -7,9 +8,12 @@
   <strong>Comment:</strong>
   <%= comment.body %>
 </p>
+<% end %>
 
+<% if current_user != nil && comment.article.author_email == current_user.email %>
 <p>
   <%= link_to 'Destroy Comment', [comment.article, comment],
               method: :delete,
               data: { confirm: "Are you sure?" } %>
 </p>
+<% end %>
