--- a/app/views/articles/_navbar.html.erb
+++ b/app/views/articles/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div id='navbar-div'>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed">
           <a class="navbar-brand" href="#">Ruby Blog <%= current_user != nil ? " | " + current_user.email : "" %></a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,7 +7,7 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav pull-right">
 
               <% if user_signed_in? %>
                   <li class="nav-item">
