--- a/app/views/articles/mine.html.erb
+++ b/app/views/articles/mine.html.erb
@@ -5,18 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 </head>
 <body>
 
   <%= render "navbar" %>
 
+  <div class='article-info'>
+  <p>Public</p>
   <ul>
-    <% @articles.each do |article| %>
+    <% @articles.select { |article| article.status == 'public' }.each do |article| %>
       <li>
-        <%= article.author_nickname %>: <%= link_to article.title, article %> - <%= article.status %>
+        <%= link_to article.title, article %>
       </li>
     <% end %>
   </ul>
+
+  <p>Private</p>
+  <ul>
+    <% @articles.select { |article| article.status == 'private' }.each do |article| %>
+      <li>
+        <%= link_to article.title, article %>
+      </li>
+    <% end %>
+  </ul>
+
+  <p>Archived</p>
+  <ul>
+    <% @articles.select { |article| article.status == 'archived' }.each do |article| %>
+      <li>
+        <%= link_to article.title, article %>
+      </li>
+    <% end %>
+  </ul>
+  </div>
 
 </body>
 </html>
