--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 </head>
 <body>
 
   <%= render "navbar" %>
 
+  <div class='article-info'>
   <h1>New Article</h1>
 
-    <%= render "form", article: @article %>
+  <%= render "form", article: @article %>
+  </div>
 
 </body>
 </html>
