--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 </head>
 <body>
 
   <%= render "navbar" %>
 
+  <div class='article-info show-file'>
   <h1><%= @article.title %></h1>
 
   <p><%= @article.body %></p>
@@ -30,6 +32,7 @@
     <h2>Add a comment:</h2>
     <%= render 'comments/form' %>
   <% end %>
+  </div>
 
 </body>
 </html>
