--- a/app/views/articles/_navbar.html.erb
+++ b/app/views/articles/_navbar.html.erb
@@ -11,27 +11,31 @@
 
               <% if user_signed_in? %>
                   <li class="nav-item">
-                      <%= link_to 'All Articles', articles_url, class: 'nav-link' %>
+                      <%= link_to 'All articles', articles_url, class: 'nav-link' %>
                   </li>
 
                   <li class="nav-item">
-                      <%= link_to 'My Articles', articles_mine_url, class: 'nav-link' %>
+                      <%= link_to 'My articles', articles_mine_url, class: 'nav-link' %>
                   </li>
 
                   <li class="nav-item">
-                      <%= link_to "Create Article", new_article_path, class: 'nav-link' %>
+                      <%= link_to "Create article", new_article_path, class: 'nav-link' %>
                   </li>
 
                   <li class="nav-item">
-                      <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+                      <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
                   </li>
               <% else %>
                   <li class="nav-item">
-                      <%= link_to 'Create Account', new_user_registration_path, class: 'nav-link' %>
+                      <%= link_to 'All articles', articles_url, class: 'nav-link' %>
                   </li>
 
                   <li class="nav-item">
-                      <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
+                      <%= link_to 'Create account', new_user_registration_path, class: 'nav-link' %>
+                  </li>
+
+                  <li class="nav-item">
+                      <%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %>
                   </li>
               <% end %>
 
