--- a/app/views/articles/find.html.erb
+++ b/app/views/articles/find.html.erb
@@ -9,27 +9,23 @@
 </head>
 <body>
 
-  <%= render "articles/navbar" %>
+  	<%= render "articles/navbar" %>
 
-  <div class='article-info'>
-  <div class='find'>
-    <form action="/find">
-      <label for="q">Find articles by title:</label>
-      <input type="text" name="q">
-      <button type="submit">Find</button>
-    </form>
-  </div>
+  	<div class='article-info'>
+  	  	<%= render "find_by_title_div" %>
 
-  <p>Found <%= @articles.size %> articles:</p>
+  	  	<%= render "filter_by_categories_div" %>
 
-  <ul>
-    <% @articles.select { |article| article.status == "public" }.each do |article| %>
-        <li>
-          <%= article.author_nickname %>: <%= link_to article.title, article %>
-        </li>
-    <% end %>
-  </ul>
-  </div>
+  	  	<p>Found <%= @articles.size %> articles:</p>
+
+  	  	<ul>
+  	  	  	<% @articles.select { |article| article.status == "public" }.each do |article| %>
+  	  	      	<li>
+  	  	       		<%= article.author_nickname %>: <%= link_to article.title, article %> - <%= article.category %>
+  	  	      	</li>
+  	  	  	<% end %>
+  	  	</ul>
+  	</div>
 
 </body>
 </html>
