--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,29 +9,25 @@
 </head>
 <body>
 
-  <%= render "articles/navbar" %>
+  	<%= render "articles/navbar" %>
 
-  <div class='article-info'>
-  <div class='find'>
-    <form action="/find">
-      <label for="q">Find articles by title:</label>
-      <input type="text" name="q">
-      <button type="submit">Search</button>
-    </form>
-  </div>
+  	<div class='article-info'>
+  	  	<%= render "find_by_title_div" %>
 
-  <h1><%= Article.public_count %> Articles</h1>
+  	  	<%= render "filter_by_categories_div" %>
 
-  <ul>
-    <% @articles.select { |article| article.status == "public" }.each do |article| %>
-        <li>
-          <%= article.author_nickname %>: <%= link_to article.title, article %>
-        </li>
-    <% end %>
-  </ul>
-  </div>
+  	  	<h1><%= Article.public_count %> Articles</h1>
 
-  <%= will_paginate @articles, renderer: BootstrapPagination::Rails, previous_label: '<= Previous Page', next_label: 'Next Page =>' %>
+  	  	<ul>
+  	  	  	<% @articles.select { |article| article.status == "public" }.each do |article| %>
+  	  	  	    <li>
+  	  	  	      	<%= article.author_nickname %>: <%= link_to article.title, article %> - <%= article.category %>
+  	  	  	    </li>
+  	  	  	<% end %>
+  	  	</ul>
+  	</div>
+
+  	<%= will_paginate @articles, renderer: BootstrapPagination::Rails, previous_label: '<= Previous Page', next_label: 'Next Page =>' %>
 
 </body>
 </html>
