--- a/app/views/articles/_find_by_title_div.html.erb
+++ b/app/views/articles/_find_by_title_div.html.erb
@@ -1,7 +1,13 @@
-<div class='find-by-title-div'>
+<div class='find-by-title-div item'>
     <form action="/find">
-        <label for="q">Find articles by title:</label>
-        <input type="text" name="q">
-        <button type="submit">Search</button>
+        <div class="item label-div">
+            <label for="q">Find articles by title:</label>
+        </div>
+        <div class="item input-div">
+            <input type="text" name="q">
+        </div>
+        <div class="item btn-div">
+            <button type="submit" class="btn btn-secondary">Find</button>
+        </div>
     </form>
 </div>
