--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -26,7 +26,7 @@
 
   	<div>
   	  	<%= form.label :category %><br>
-  	  	<%= form.select :category, ['informational', 'news', 'question'], selected: 'informational' %>
+  	  	<%= form.select :category, ['science', 'sport', 'art', 'education', 'chill'], selected: 'education' %>
   	</div>
 
   	<br>
