--- a/app/views/articles/_navbar.html.erb
+++ b/app/views/articles/_navbar.html.erb
@@ -1,9 +1,10 @@
 <div id='navbar-div'>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed">
-        <a class="navbar-brand" href="#">Ruby Blog <%= current_user != nil ? " | " + current_user.email : "" %></a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed">
+        <a class="navbar-brand" href="/articles">Ruby Blog <%= current_user != nil ? " | " + current_user.email : "" %></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav pull-right">
             <% if user_signed_in? %>
@@ -32,5 +33,5 @@
             <% end %>
           </ul>
         </div>
-      </nav>
+    </nav>
 </div>
