--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,22 +12,22 @@
   	<%= render "articles/navbar" %>
 
   	<div class='article-info'>
-  	  	<%= render "find_by_title_div" %>
+		<div class="top">
+			<div class="count">
+				<h2><%= Article.public_count %> Articles</h2>
+			</div>
+		
+  	  		<%= render "find_by_title_div" %>
+		
+  	  		<%= render "filter_by_categories_div" %>
+		</div>
 
-  	  	<%= render "filter_by_categories_div" %>
+  	  	<%= render "articles_list" %>
 
-  	  	<h1><%= Article.public_count %> Articles</h1>
-
-  	  	<ul>
-  	  	  	<% @articles.select { |article| article.status == "public" }.each do |article| %>
-  	  	  	    <li>
-  	  	  	      	<%= article.author_nickname %>: <%= link_to article.title, article %> - <%= article.category %>
-  	  	  	    </li>
-  	  	  	<% end %>
-  	  	</ul>
+		<div class='paginator'>
+			<%= will_paginate @articles, renderer: BootstrapPagination::Rails, previous_label: '<= Previous Page', next_label: 'Next Page =>' %>
+		</div>
   	</div>
-
-  	<%= will_paginate @articles, renderer: BootstrapPagination::Rails, previous_label: '<= Previous Page', next_label: 'Next Page =>' %>
 
 </body>
 </html>
