--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,48 @@
-<h2>Sign up</h2>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+</head>
+<body>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+	<%= render "articles/navbar" %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+	<div class="sign-up-div">
+		<h2>Sign up</h2>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+		<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+		  	<%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+		  	<div class="field">
+		  	  	<%= f.label :email %><br />
+		  	  	<%= f.email_field :email, class: "form-control", autofocus: true, autocomplete: "email" %>
+		  	</div>
+		  
+		  	<div class="field">
+		  	  	<%= f.label :password %>
+		  	  	<% if @minimum_password_length %>
+		  	  	<em>(<%= @minimum_password_length %> characters minimum)</em>
+		  	  	<% end %><br />
+		  	  	<%= f.password_field :password, class: "form-control", autocomplete: "new-password" %>
+		  	</div>
+		  
+		  	<div class="field">
+		  	  	<%= f.label :password_confirmation %><br />
+		  	  	<%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" %>
+		  	</div>
+		  
+		  	<div class="actions">
+		  	  	<button type="submit" class="btn btn-secondary">Sign Up</button>
+		  	</div>
+		<% end %>
+		<div class="links">
+			<%= render "devise/shared/links" %>
+		</div>
+	</div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</body>
+</html>
