--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -4,11 +4,15 @@
 
 body {
     height: 100vh;
-    background: #f2f2f2 !important;
+    background: #141415 !important;
 }
 
 .navbar {
     font-size: 20px;
+}
+
+.navbar-custom {
+    background-color: #0d3b66;
 }
 
 .article-info {
@@ -22,48 +26,74 @@ body {
     align-items: center;
     height: 84%;
 
-    a {
+    .list-element {
+        background-color: #1f2833;
+        padding-left: 1%;
+        overflow: hidden;
+        text-overflow: ellipsis;
         width: 50%;
-        color: black;
+        color: #d7dadc;
         align-items: center;
         margin: 0.3%;
-        border: 1.8px solid gray;
+        border: 1.8px solid #0d3b66;
         border-radius: 4px;
-    }
+    
+        h2 {
+            text-align: center;
+            margin: 5px;
+        }
+    
+        h3 {
+            margin: 2px;
+        }
+    
+        h4 {
+            margin: 2px;
+            text-align: end;
+        }
+    } 
+}
+
+nav {
+    height: 10%;
 }
 
 .paginator {
     text-align: center;
-    width: 97%;
-    height: 10%;
+    width: 100%;
     vertical-align: middle;
+    height: 5%;
+
+    .page-link {
+        position: relative;
+        display: block;
+        padding: .5rem .75rem;
+        margin-left: -1px;
+        line-height: 1.25;
+        color: #d7dadc !important;
+        background-color: #1f2833 !important;
+        border: 1px solid #0d3b66 !important;
+    }
+
+    .page-link:hover {
+        z-index: 2;
+        color: #fff !important;
+        text-decoration: none;
+        background-color: #a4a4a4 !important;
+        border-color: #dee2e6;
+    }
+
+    .page-item.active .page-link {
+        z-index: 3;
+        color: #fff;
+        background-color: #808080 !important;
+        border-color: #353535;
+    }
 }
 
 .title-header {
     align-items: center;
 }
-
-.list-element {
-    background-color: #d9d9d9;
-    width: 100%;
-    padding-left: 1%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-
-    h2 {
-        text-align: center;
-        margin: 5px;
-    }
-
-    h3 {
-        margin: 2px;
-    }
-
-    h4 {
-        margin: 2px;
-        text-align: end;
-    }
-} 
 
 .top {
     display: flex;
@@ -71,82 +101,98 @@ body {
     margin-left: 2%;
     margin-right: 2%;
     height: 7%;
+    color: #d7dadc;
 
     input {
         border-radius: 4px;
-        border: 2px solid gray;
-    }
-}
-
-.filter-by-categories-div {
-    width: 30%;
-
-    form {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
+        border: 2px solid #0d3b66;
+        background-color: #1f2833;
+        color: #d7dadc;
     }
 
-    .item {
-        height: 100%;
-    }
+    .filter-by-categories-div {
+        width: 30%;
+    
+        form {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+        }
+    
+        .item {
+            height: 100%;
+        }
+    
+        .select-div {
+            height: 100%;
+            margin-left: 1.5%;
+    
+            select {
+                border-radius: 4px;
+                border: 2px solid #0d3b66;
+                background-color: #1f2833;
+                color: #d7dadc;
+                height: 1.7em;
+            }
+        }
+    
+        .label-div {
+            margin-left: 0;
+        }
+    
+        .input-div {
+            margin-left: 1.5%;
+        }
+    
+        .btn-div {
+            margin-left: 1.5%;
 
-    .select-div {
-        height: 100%;
-        margin-left: 1.5%;
-
-        select {
-            border-radius: 4px;
-            border: 2px solid gray;
-            height: 1.7em;
+            button {
+                background-color: #0d3b66 !important;
+                color: #d7dadc;
+            }
         }
     }
+    
+    .find-by-title-div {
+        width: 40%;
+    
+        form {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+        }
+    
+        .item {
+            height: 100%;
+        }
+    
+        .label-div {
+            margin-left: 0;
+        }
+    
+        .input-div {
+            margin-left: 1%;
+        }
+    
+        .btn-div {
+            margin-left: 1%;
 
-    .label-div {
-        margin-left: 0;
+            button {
+                background-color: #0d3b66 !important;
+                color: #d7dadc;
+            }
+        }
     }
-
-    .input-div {
-        margin-left: 1.5%;
+    
+    .count {
+        width: 30%;
+    
+        h2 {
+            margin: 0;
+        }
     }
-
-    .btn-div {
-        margin-left: 1.5%;
-    }
-}
-
-.find-by-title-div {
-    width: 40%;
-
-    form {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-    }
-
-    .item {
-        height: 100%;
-    }
-
-    .label-div {
-        margin-left: 0;
-    }
-
-    .input-div {
-        margin-left: 1%;
-    }
-
-    .btn-div {
-        margin-left: 1%;
-    }
-}
-
-.count {
-    width: 30%;
-
-    h2 {
-        margin: 0;
-    }
+    
 }
 
 .sign-in-div {
@@ -155,9 +201,10 @@ body {
     font-size: 20px;
     margin: auto;
     margin-top: 5%;
-    border: 1.8px solid gray;
+    border: 1.8px solid #0d3b66;
     border-radius: 4px;
-    background-color: #d9d9d9;
+    background-color: #1f2833;
+    color: #d7dadc;
 
     h2 {
         text-align: center;
@@ -168,6 +215,7 @@ body {
         
         input {
             height: 3em;
+            background: #1f2833;
         }
     }
 
@@ -183,6 +231,8 @@ body {
             width: 50%;
             margin-left: 25%;
             font-size: 20px;
+            background-color: #0d3b66;
+            color: #d7dadc;
         }
     }
 }
@@ -193,9 +243,10 @@ body {
     font-size: 20px;
     margin: auto;
     margin-top: 5%;
-    border: 1.8px solid gray;
+    border: 1.8px solid #0d3b66;
     border-radius: 4px;
-    background-color: #d9d9d9;
+    background-color: #1f2833;
+    color: #d7dadc;
 
     h2 {
         text-align: center;
@@ -206,6 +257,7 @@ body {
         
         input {
             height: 3em;
+            background: #1f2833;
         }
     }
 
@@ -221,6 +273,45 @@ body {
             width: 50%;
             margin-left: 25%;
             font-size: 20px;
+            background-color: #0d3b66;
+            color: #d7dadc;
         }
+    }
+}
+
+.my-articles {
+    display: flex;
+    flex-direction: row;
+    font-size: 20px;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-top: -0.6%;
+    justify-content: space-between;
+    color: #d7dadc;
+
+    .column {
+        flex: 1;
+        width: 30vw;
+        border: 2px solid #0d3b66;
+        border-radius: 4px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        background-color: #1f2833;
+
+        h2 {
+            text-align: center;
+        }
+
+        a {
+            color: #d7dadc;
+        }
+    }
+
+    .private {
+        margin-left: 0.7%;
+    }
+
+    .archieved {
+        margin-left: 0.7%;
     }
 }
