--- a/app/views/articles/_articles_list.html.erb
+++ b/app/views/articles/_articles_list.html.erb
@@ -1,11 +1,9 @@
 <div class="articles-list">
 	<% @articles.select { |article| article.status == "public" }.each do |article| %>
-		<a href="/articles/<%= article.id %>">
-  	    	<div class="list-element">
-				<h3><%= article.author_nickname %> - <%= article.category %></h3>
-				<h2 class="title-header"><%= article.title %></h2>
-				<h4><%= article.updated_at %></h4>
-			</div>
-		</a>
+  	    <div class="list-element">
+			<h3><%= article.author_nickname %> - <a href="/filter?q=<%= article.category %>"><%= article.category %></a></h3>
+			<h2 class="title-header"><a href="/articles/<%= article.id %>"><%= article.title %></a></h2>
+			<h4><%= article.updated_at %></h4>
+		</div>
   	<% end %>
 </div>
