--- a/app/views/articles/_navbar.html.erb
+++ b/app/views/articles/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div id='navbar-div'>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-static-top navbar-custom">
         <a class="navbar-brand" href="/articles">Ruby Blog <%= current_user != nil ? " | " + current_user.email : "" %></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
