--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -25,7 +25,7 @@
   	  	<%= render "articles_list" %>
 
 		<div class='paginator'>
-			<%= will_paginate @articles, renderer: BootstrapPagination::Rails, previous_label: '<= Previous Page', next_label: 'Next Page =>' %>
+			<%= will_paginate @clients, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
 		</div>
   	</div>
 
