--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -11,7 +11,7 @@
 
     <%= render "navbar" %>
 
-    <div class='article-info'>
+    <div class="edit">
         <h1>Edit Article</h1>   
         <%= render "form", article: @article %>
     </div>
