--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -29,7 +29,7 @@
   	  	<%= form.select :category, ['science', 'sport', 'art', 'education', 'chill'], selected: 'education', class: "form-control" %>
   	</div>
 
-  	<button type="submit" class="btn btn-secondary">Find</button>
+  	<button type="submit" class="btn btn-secondary">Save</button>
 
   	<div class="status">
   	  	<%= form.label :status %><br>
