add styles + fix filter

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,44 +1,46 @@
 <div class="article-form">
-<%= form_with model: article do |form| %>
-  	<div class="title">
-  	  	<%= form.label :title %><br>
-  	  	<%= form.text_field :title, class: "form-control" %>
-  	  	<% article.errors.full_messages_for(:title).each do |message| %>
-  	  	  	<div><%= message %></div>
-  	  	<% end %>
-  	</div>
+	<%= form_with model: article do |form| %>
+	  	<div class="title">
+	  	  	<%= form.label :title %><br>
+	  	  	<%= form.text_field :title, class: "form-control" %>
+	  	  	<% article.errors.full_messages_for(:title).each do |message| %>
+	  	  	  	<div><%= message %></div>
+	  	  	<% end %>
+	  	</div>
 
-  	<div class="text">
-  	  	<%= form.label :body %><br>
-  	  	<%= form.text_area :body, class: "form-control" %><br>
-  	  	<% article.errors.full_messages_for(:body).each do |message| %>
-  	  	  	<div><%= message %></div>
-  	  	<% end %>
-  	</div>
+	  	<div class="text">
+	  	  	<%= form.label :body %><br>
+	  	  	<%= form.text_area :body, class: "form-control" %><br>
+	  	  	<% article.errors.full_messages_for(:body).each do |message| %>
+	  	  	  	<div><%= message %></div>
+	  	  	<% end %>
+	  	</div>
 
-  	<div class="nickname">
-  	  	<%= form.label :author_nickname %><br>
-  	  	<%= form.text_field :author_nickname, class: "form-control" %><br>
-  	  	<% article.errors.full_messages_for(:author).each do |message| %>
-  	  	  	<div><%= message %></div>
-  	  	<% end %>
-  	</div>
+		<div class="image-picker btn btn-secondary">
+			<!-- <%= form.file_field :picture, class: "form-control" %> -->
+			<span>Upload Photo</span>
+			<input type="file" name="picture" class="upload">
+		</div>
 
-  	<div class="category">
-  	  	<%= form.label :category %><br>
-  	  	<%= form.select :category, ['science', 'sport', 'art', 'education', 'chill'], selected: 'education', class: "form-control" %>
-  	</div>
+	  	<div class="nickname">
+	  	  	<%= form.label :author_nickname %><br>
+	  	  	<%= form.text_field :author_nickname, class: "form-control" %><br>
+	  	  	<% article.errors.full_messages_for(:author).each do |message| %>
+	  	  	  	<div><%= message %></div>
+	  	  	<% end %>
+	  	</div>
 
-  	<button type="submit" class="btn btn-secondary">Save</button>
+		<div class="select-fields">
+	  		<div class="category">
+	  		  	<%= form.label :category %><br>
+	  		  	<%= form.select :category, ['science', 'sport', 'art', 'education', 'chill'], selected: 'education', class: "form-control" %>
+	  		</div>
+	  		<div class="status">
+	  		  	<%= form.label :status %><br>
+	  		  	<%= form.select :status, ['public', 'private', 'archived'], selected: article.status, class: "form-control" %>
+	  		</div>
+		</div>
 
-  	<div class="status">
-  	  	<%= form.label :status %><br>
-  	  	<%= form.select :status, ['public', 'private', 'archived'], selected: article.status, class: "form-control" %>
-  	</div>
-
-	<div class="image-picker">
-		<%= form.file_field :picture, class: "form-control", class: "form-control" %>
-	</div>
-
-<% end %>
+		<button type="submit" class="btn btn-secondary">Save</button>
+	<% end %>
 </div>
