--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -11,7 +11,7 @@
 
   	<%= render "navbar" %>
 	
-  	<div class="article-info">
+  	<div class="article-info create-article">
   	    <h1>New Article</h1>
     
         <div class="create-article-form">
