--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -15,7 +15,7 @@
 		</div>
 
 		<div class="submit">
-	  		<button type="submit" class="btn btn-secondary">Submit</button>
+	  		<button type="submit" class="btn btn-secondary">Submit Comment</button>
 		</div>
 	<% end %>
 </div>
