--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -215,7 +215,9 @@ nav {
         
         input {
             height: 3em;
-            background: #1f2833;
+            border-radius: 4px;
+            border: 2px solid #0d3b66;
+            background-color: #1f2833;
             color: #d7dadc;
         }
     }
@@ -258,7 +260,9 @@ nav {
         
         input {
             height: 3em;
-            background: #1f2833;
+            border-radius: 4px;
+            border: 2px solid #0d3b66;
+            background-color: #1f2833;
             color: #d7dadc;
         }
     }
@@ -329,6 +333,7 @@ nav {
     margin: auto;
     padding: 1%;
     height: fit-content;
+    font-size: 20px;
 
     .author-category {
         h3 {
@@ -343,6 +348,22 @@ nav {
         }
     }
 
+    .picture {
+        img {
+            width: 100%;
+        }
+    }
+
+    .edit-destroy {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .destroy {
+            color: red;
+        }
+    }
+
     .comment-form {
         div {
             margin-top: 1%;
@@ -350,8 +371,10 @@ nav {
 
         .commenter {
             input {
-                background: #1f2833;
                 width: 50%;
+                border-radius: 4px;
+                border: 2px solid #0d3b66;
+                background-color: #1f2833;
                 color: #d7dadc;
             }
 
@@ -362,8 +385,10 @@ nav {
 
         .body {
             textarea {
-                background: #1f2833;
                 width: 50%;
+                border-radius: 4px;
+                border: 2px solid #0d3b66;
+                background-color: #1f2833;
                 color: #d7dadc;
             }
 
@@ -391,13 +416,8 @@ nav {
                 font-size: 20px;
                 background-color: #0d3b66;
                 color: #d7dadc;
+                width: 25%;
             }
-        }
-    }
-
-    .picture {
-        img {
-            width: 100%;
         }
     }
 }
@@ -415,6 +435,16 @@ nav {
 
     h1 {
         text-align: center;
+        margin: 1%;
+    }
+}
+
+.article-form {
+    display: flex;
+    flex-direction: column;
+
+    .title {
+        margin: 3%;
     }
 
     select {
@@ -426,8 +456,9 @@ nav {
     }
 
     input {
-        background: #1f2833;
-        width: 50%;
+        border-radius: 4px;
+        border: 2px solid #0d3b66;
+        background-color: #1f2833;
         color: #d7dadc;
     }
 
@@ -435,11 +466,87 @@ nav {
         font-size: 20px;
         background-color: #0d3b66;
         color: #d7dadc;
+        width: 50%;
+        margin-left: 25%;
+        margin-top: 3%;
+        margin-bottom: 3%;
     }
 
-    textarea {
-        background: #1f2833;
-        width: 50%;
+    .text {
+        margin: 3%;
+        margin-bottom: 0%;
+
+        textarea {
+            border-radius: 4px;
+            border: 2px solid #0d3b66;
+            background-color: #1f2833;
+            color: #d7dadc;
+            margin: 0%;
+        }
+    }
+
+    .nickname {
+        margin: 3%;
+        margin-bottom: 0%;
+    }
+
+    .select-fields {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    .image-picker {
+        margin-left: 3%;
+        position: relative;
+        overflow: hidden;
+        font-size: 15px;
+        background-color: #0d3b66;
         color: #d7dadc;
+
+        input.upload {
+            position: absolute;
+            top: 0;
+            right: 0;
+            margin: 0;
+            padding: 0;
+            font-size: 15px;
+            cursor: pointer;
+            opacity: 0;
+            filter: alpha(opacity=0);
+        }
+    }
+}
+
+.create-article {
+    width: 30%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    border: 1.8px solid #0d3b66;
+    border-radius: 4px;
+    background-color: #1f2833;
+    color: #d7dadc;
+
+    h1 {
+        text-align: center;
+        margin: 1%;
+    }
+}
+
+.comment {
+    width: 50%;
+    border: 1.8px solid #0d3b66;
+    border-radius: 4px;
+    padding: 1%;
+
+    p {
+        word-break: break-all;
+        margin: 0%;
+    }
+
+    h3 {
+        margin: 0%;
     }
 }
