--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,19 +1,14 @@
-<% if comment.status == "public" || (comment.status == "private" && current_user != nil && comment.article.author_email == current_user.email) %>
-<p>
-  	<strong>Commenter:</strong>
-  	<%= comment.commenter %>
-</p>
+<div class="comment">
+	<% if comment.status == "public" || (comment.status == "private" && current_user != nil && comment.article.author_email == current_user.email) %>
+		<h3><%= comment.commenter %></h3>
+		<p><%= comment.body %></p>
+	<% end %>
 
-<p>
-  	<strong>Comment:</strong>
-  	<%= comment.body %>
-</p>
-<% end %>
-
-<% if current_user != nil && comment.article.author_email == current_user.email %>
-<p>
-  	<%= link_to 'Destroy Comment', [comment.article, comment],
-  	            method: :delete,
-  	            data: { confirm: "Are you sure?" } %>
-</p>
-<% end %>
+	<% if current_user != nil && comment.article.author_email == current_user.email %>
+		<p>
+		  	<%= link_to 'Destroy Comment', [comment.article, comment],
+		  	            method: :delete,
+		  	            data: { confirm: "Are you sure?" } %>
+		</p>
+	<% end %>
+</div>
