--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -498,23 +498,11 @@ nav {
 
     .image-picker {
         margin-left: 3%;
-        position: relative;
-        overflow: hidden;
+        border-radius: 4px;
+        width: 94%;
         font-size: 15px;
         background-color: #0d3b66;
         color: #d7dadc;
-
-        input.upload {
-            position: absolute;
-            top: 0;
-            right: 0;
-            margin: 0;
-            padding: 0;
-            font-size: 15px;
-            cursor: pointer;
-            opacity: 0;
-            filter: alpha(opacity=0);
-        }
     }
 }
 
